Now using module.

--- a/SomeSubmodule/CMakeLists.txt
+++ b/SomeSubmodule/CMakeLists.txt
@@ -3,11 +3,11 @@ project(MathLib)
 set( CMAKE_CXX_STANDARD 20 )
 
 add_library( MathLib STATIC )
-target_sources(MathLib PUBLIC
-   MathLib.cpp
+target_sources(MathLib 
    PUBLIC
-   FILE_SET HEADERS
-   BASE_DIRS include
+   FILE_SET CXX_MODULES
    FILES
-   include/MathLib/MathLib.h
+   MathLib.cpp
 )
+
+target_compile_options( MathLib PUBLIC /fp:precise /sdl)
