--- a/TestModulesCMake/TestModulesCMake.vcxproj
+++ b/TestModulesCMake/TestModulesCMake.vcxproj
@@ -78,6 +78,8 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <AdditionalIncludeDirectories>$(SolutionDir)/SomeSubmodule/Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalModuleDependencies>MathLib.ifc</AdditionalModuleDependencies>
+      <AdditionalBMIDirectories>$(SolutionDir)SomeSubmodule\out\build\x64-Debug\CMakeFiles\MathLib.dir</AdditionalBMIDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -96,6 +98,8 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <AdditionalIncludeDirectories>$(SolutionDir)/SomeSubmodule/Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalModuleDependencies>MathLib.ifc</AdditionalModuleDependencies>
+      <AdditionalBMIDirectories>$(SolutionDir)SomeSubmodule\out\build\x64-Debug\CMakeFiles\MathLib.dir</AdditionalBMIDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -110,10 +114,13 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <AdditionalIncludeDirectories>$(SolutionDir)/SomeSubmodule/Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalModuleDependencies>MathLib.ifc</AdditionalModuleDependencies>
+      <AdditionalBMIDirectories>$(SolutionDir)SomeSubmodule\out\build\x64-Debug\CMakeFiles\MathLib.dir</AdditionalBMIDirectories>
+      <FloatingPointModel>Precise</FloatingPointModel>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -132,6 +139,8 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <AdditionalIncludeDirectories>$(SolutionDir)/SomeSubmodule/Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalModuleDependencies>MathLib.ifc</AdditionalModuleDependencies>
+      <AdditionalBMIDirectories>$(SolutionDir)SomeSubmodule\out\build\x64-Debug\CMakeFiles\MathLib.dir</AdditionalBMIDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
